feat: update scraper API to accept full Facebook event URL as query parameter
